[package]
name = "etherscan_abi_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
ethers-core = "0.6"
tokio = { version = "1", features = ["full"] }
mockito = "0.32.0"
httpmock = "0.6.8"

[dev-dependencies]
# Add tokio-test for async testing support
tokio-test = "0.4.0"